Refactor team section and update documentation links
Updated team section and documentation links.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- Team Members -->
         <section>
             <h2>Команда Разработчиков</h2>
-            <div class="team-grid">
+            <div class="team-grid" id="devs">
                 <!-- Member 1 -->
                 <div class="team-member">
                     <h3>Шиманский Константин Алексеевич</h3>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="info-card">
                     <strong>Работа с полем</strong>
-                    <p>Управление игровым полем 4x4</p>
+                    <p>Управление игровым полем</p>
                 </div>
                 <div class="info-card">
                     <strong>Undo</strong>
@@ -218,22 +218,22 @@
             <h2>Документация</h2>
             <p>Полная документация проекта доступна в следующих источниках:</p>
             <div class="doc-links">
-                <a href="#" class="doc-link">
-                    <span>Описание проекта</span>
+                <a href="https://docs.google.com/document/d/1xm_MTBtBx9pz7p89WS8YvG2XwttEp64f/edit?usp=drive_link&ouid=112448259876479827363&rtpof=true&sd=true"  target="_blank" class="doc-link">
+                    <span>Документация проекта</span>
                 </a>
-                <a href="#" class="doc-link">
-                    <span>GitHub Wiki</span>
+                <a href="#devs" class="doc-link">
+                    <span>Разработчики</span>
                 </a>
-                <a href="#" class="doc-link">
+                <a href="https://docs.google.com/document/d/19KdxZXdHg9OHyPV9kMfmTysjtMTvLLzi/edit?usp=drive_link&ouid=112448259876479827363&rtpof=true&sd=true"  target="_blank" class="doc-link">
                     <span>Техническое задание</span>
                 </a>
-                <a href="#" class="doc-link">
+                <a href="https://docs.google.com/document/d/1pw2o4HtnyTB3duvnKQepzof-J_BS9BkV/edit?usp=drive_link&ouid=112448259876479827363&rtpof=true&sd=true" target="_blank" class="doc-link">
                     <span>Отчет тестирования</span>
                 </a>
-                <a href="#" class="doc-link">
-                    <span>Диаграммы</span>
+                <a href="https://drive.google.com/drive/folders/1MsPGkei8JpwP0rM4S8YUCz2ir1lxvMj1?usp=sharing" target="_blank" class="doc-link">
+                    <span>Блок-схемы</span>
                 </a>
-                <a href="#" class="doc-link">
+                <a href="https://github.com/Sneg1r/Project-OPI_12" target="_blank" class="doc-link">
                     <span>Исходный код</span>
                 </a>
             </div>
